viser persontreff-liste på søk med link til fnr

--- a/frontend/src/stilark/Lists.less
+++ b/frontend/src/stilark/Lists.less
@@ -26,3 +26,13 @@ nav ul {
     }
   }
 }
+
+.personlink {
+  text-decoration: none;
+  color: #0067c5;
+
+  &:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
+}
