--- a/frontend/index.css
+++ b/frontend/index.css
@@ -2,39 +2,26 @@
 @import "@navikt/ds-css" layer(components);
 @import "./fonts.css" layer(fonts);
 
+@layer components {
+  @theme {
+    --a-font-family: "Source Sans 3", Arial, sans-serif;
+  }
+}
+
 :root {
-  --a-font-family: 'Source Sans 3', Arial, sans-serif;
+  --a-font-family: "Source Sans 3", Arial, sans-serif;
+}
+
+@theme {
+  --font-display: "Source Sans 3", Arial, sans-serif;
 }
 
 html {
   box-sizing: border-box;
-  font-family: 'Source Sans 3', Arial, sans-serif;
-  font-size: var(--a-spacing-4);
 }
 
 *,
 *::before,
 *::after {
   box-sizing: inherit;
-}
-
-html,
-body,
-#app {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  font-size: var(--a-spacing-4);
-}
-
-#app {
-  display: flex;
-  flex-flow: column;
-}
-
-.smart-editor {
-  outline: none;
-  min-height: 100%;
 }
