Fix Nav variables in Tailwind and update dependencies

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "@navikt/ds-css" layer(components);
 @import "./fonts.css" layer(fonts);
+@config './tailwind.config.js';
 
 @layer components {
   @theme {
