Extract common DropZone component and migrate to Aksel and Tailwind

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -8,16 +8,17 @@
     --a-font-family: "Source Sans 3", Arial, sans-serif;
     --color-drop-background: rgba(230, 240, 255, 0.5);
     --color-drop-background-hover: rgba(153, 195, 255, 0.5);
+    --color-drop-background-danger: rgba(255, 230, 230, 0.5);
+    --color-drop-background-danger-hover: rgba(255, 153, 153, 0.5);
   }
-
 }
 
-@utility text-stroke {
+@utility text-stroke-* {
   text-shadow:
-    -1px -1px 0 var(--a-bg-default),  
-    1px -1px 0 var(--a-bg-default),
-    -1px 1px 0 var(--a-bg-default),
-    1px 1px 0 var(--a-bg-default);
+    -1px -1px 0 --value(--color-*),
+    1px -1px 0 --value(--color-*),
+    -1px 1px 0 --value(--color-*),
+    1px 1px 0 --value(--color-*);
 }
 
 :root {
